# Building-an-MCP-Server-with-OCR

./: README.md  onlyweather.py  pyproject.toml  setup_ocr.bat  test_ocr.py  v2weather.py  weather.py
