[project]
name = "weather"
version = "0.1.0"
description = "Weather and PDF MCP Server with OCR support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "PyPDF2>=3.0.1",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
]

[project.scripts]
weather = "weather:main"

[tool.uv]
package = false